feat: Added sort

--- a/styles/components/_school-short.scss
+++ b/styles/components/_school-short.scss
@@ -10,6 +10,7 @@
   background-color: $white;
   box-shadow: 4px 4px 16px rgba(42, 43, 46, 0.35);
   transition: box-shadow 0.2s ease-in-out;
+  width: 100%;
 
   cursor: pointer;
 
