--- a/styles/components/_sort.scss
+++ b/styles/components/_sort.scss
@@ -9,20 +9,79 @@
   border-radius: .25rem;
   background-color: $white;
   box-shadow: 0px 0px 0px rgba(42, 43, 46, 0.35);
-  width: fit-content;
+  width: 8rem;
+  transition-property: box-shadow, height;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+
+  &.active {
+    height: calc(8rem + 5px);
+    box-shadow: 4px 4px 16px rgba(42, 43, 46, 0.35);
+
+    .selected::before {
+      transform: rotate(180deg) translateY(50%);
+    }
+  }
 
   .selected {
     width: 100%;
     background-color: $black;
-    margin-bottom: .5rem;
     padding: .5rem 1rem;
+    position: relative;
 
     p {
       color: $white;
       @include S;
       font-weight: 700;
     }
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 50%;
+      right: 1rem;
+      transform: translateY(-50%) rotate(360deg);
+      height: 1rem;
+      width: 1rem;
+      background-image: url("../../assets/icons/open-arrow.svg");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      transition: transform 0.2s ease-in-out;
+      transform-origin: center;
+    }
   }
 
-  .categories {}
+  .categories {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+
+    button {
+      position: relative;
+      padding: .5rem 1rem;
+      width: 100%;
+      cursor: pointer;
+      background-color: $white;
+      border: none;
+      outline: none;
+      text-align: left;
+
+      &:not(:last-of-type):before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        display: block;
+        width: 80%;
+        height: 1px;
+        background-color: $gray;
+        border-radius: 1px;
+      }
+    }
+  }
 }
