--- a/styles/pages/_schools.scss
+++ b/styles/pages/_schools.scss
@@ -1,5 +1,14 @@
 main {
   .schools {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+
+    .search-section {
+      height: 2rem;
+      z-index: 100;
+    }
   }
 }
