feat: Added filter

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,7 @@
 @import "components/button";
 @import "components/school-short";
 @import "components/sort";
+@import "components/filter";
 
 @import "pages/index";
 @import "pages/students";
