--- a/styles/pages/_schools.scss
+++ b/styles/pages/_schools.scss
@@ -9,6 +9,10 @@ main {
     .search-section {
       height: 2rem;
       z-index: 100;
+      display: flex;
+      flex-direction: row;
+      gap: 2rem;
+      margin: 1rem 0;
     }
   }
 }
