feat: search (in progress)

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,7 @@
 @import "components/school-short";
 @import "components/sort";
 @import "components/filter";
+@import "components/search-profession";
 
 @import "pages/index";
 @import "pages/students";
