--- a/styles/components/_filter.scss
+++ b/styles/components/_filter.scss
@@ -15,9 +15,11 @@
   transition-timing-function: ease-in-out;
 
   &.active {
-    height: 30rem;
-    width: 15rem;
+    height: 45rem;
+    max-height: 75vh;
+    width: 25rem;
     box-shadow: 4px 4px 16px rgba(42, 43, 46, 0.35);
+    overflow: scroll;
 
     .selected::before {
       transform: rotate(180deg) translateY(50%);
@@ -48,6 +50,10 @@
       width: max-content;
     }
 
+    &.profession {
+      height: 100%;
+    }
+
     & > input {
       width: 100%;
       height: 1.25rem;
@@ -55,8 +61,10 @@
       outline: none;
       border: 1px solid $gray;
       border-radius: 0.25rem;
-      padding: .125rem;
-      padding-right: 0;
+      padding: .5rem;
+      height: fit-content;
+      @include S;
+      color: $black;
     }
 
     div {
@@ -79,9 +87,23 @@
         background-color: $white;
         outline: none;
         border: 1px solid $gray;
-        border-radius: 0.25rem 0 0 0.25rem;
-        padding: .125rem;
-        padding-right: 0;
+        border-radius: 0.25rem;
+        padding: .5rem;
+        height: fit-content;
+        @include S;
+        color: $black;
+
+        /* Chrome, Safari, Edge, Opera */
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+
+        /* Firefox */
+        &[type=number] {
+          -moz-appearance: textfield;
+        }
       }
     }
   }
