Switch to Vite+React

--- a/src/styles/components/_sort.scss
+++ b/src/styles/components/_sort.scss
@@ -44,7 +44,7 @@
       transform: translateY(-50%) rotate(360deg);
       height: 1rem;
       width: 1rem;
-      background-image: url("../../assets/icons/open-arrow.svg");
+      background-image: url('data:image/svg+xml;utf8,<svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 1.91421C0 1.02331 1.07714 0.577142 1.70711 1.20711L7.29289 6.79289C7.68342 7.18342 8.31658 7.18342 8.70711 6.79289L14.2929 1.20711C14.9229 0.57714 16 1.02331 16 1.91421V5.08579C16 5.351 15.8946 5.60536 15.7071 5.79289L8.70711 12.7929C8.31658 13.1834 7.68342 13.1834 7.29289 12.7929L0.292892 5.79289C0.105356 5.60536 0 5.351 0 5.08579V1.91421Z" fill="%23F7ECE1"/></svg>');
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
