feat: Improved school details and added back button

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "pages/index";
 @import "pages/students";
 @import "pages/schools";
+@import "pages/school";
 
 body {
   background-color: $white;
