--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,3 +3,7 @@ $gray: #5A5A66;
 $white: #f3f7f9;
 $green: #b7cde0;
 $blue: #01427A;
+
+$shadowNone: 0px 0px 0px rgba(42, 43, 46, 0.35);
+$shadow: 4px 4px 16px rgba(42, 43, 46, 0.35);
+$shadowHover: 4px 4px 16px rgba(42, 43, 46, 0.7);
