--- a/src/styles/pages/_schools.scss
+++ b/src/styles/pages/_schools.scss
@@ -12,7 +12,7 @@ main {
       display: flex;
       flex-direction: row;
       gap: 2rem;
-      margin: 1rem 0;
+      margin: 1rem 0 2.5rem;
     }
   }
 }
