--- a/src/styles/components/_sort.scss
+++ b/src/styles/components/_sort.scss
@@ -9,13 +9,13 @@
   border-radius: .25rem;
   background-color: $white;
   box-shadow: 0px 0px 0px rgba(42, 43, 46, 0.35);
-  width: 8rem;
+  width: 12rem;
   transition-property: box-shadow, height;
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
 
   &.active {
-    height: calc(8rem + 5px);
+    height: calc(10rem + 5px);
     box-shadow: 4px 4px 16px rgba(42, 43, 46, 0.35);
 
     .selected::before {
@@ -59,6 +59,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     width: 100%;
+    overflow-y: scroll;
 
     button {
       position: relative;
