fix: Minor visual fixes

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,8 +1,8 @@
-$black: #282a2f;
+$black: #2A2B2E;
 $gray: #5A5A66;
-$white: #f3f7f9;
-$green: #b7cde0;
-$blue: #01427A;
+$white: #F3F9FF;
+$green: #4B9FFA;
+$blue: #1F507A;
 
 $shadowNone: 0px 0px 0px rgba(42, 43, 46, 0.35);
 $shadow: 4px 4px 16px rgba(42, 43, 46, 0.35);
