--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -7,12 +7,17 @@
   border: none;
   cursor: pointer;
   transition: transform .2s ease-in-out;
+  color: $white;
 
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
+
+  svg path {
+    fill: $white;
+  }
 
   &:hover {
     transform: scale(1.01) translateY(-.01rem);
