--- a/src/styles/pages/_students.scss
+++ b/src/styles/pages/_students.scss
@@ -4,7 +4,30 @@ main {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    height: calc(100vh - 4rem);
+    min-height: calc(100vh - 4rem);
+    gap: 2rem;
+
+
+    .header {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: .5rem;
+      width: 100%;
+
+      @media only screen and (min-width: 768px) {
+        align-items: center;
+        text-align: center;
+      }
+
+      & > img {
+        width: 100%;
+        max-width: 40rem;
+        margin-top: 1rem;
+        border-radius: .25rem;
+      }
+    }
 
     .buttons {
       display: flex;
@@ -15,9 +38,41 @@ main {
 
       width: 100%;
 
+      @media only screen and (min-width: 768px) {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+
       button {
         width: 100%;
         max-width: 30rem;
+
+        &:first-of-type {
+          svg {
+            transform: translateY(0);
+            transition: transform .25s ease-in-out;
+          }
+
+          &:hover {
+            svg {
+              transform: translateY(-.25rem);
+            }
+          }
+        }
+  
+        &:last-of-type {
+          svg {
+            transform: translateX(0);
+            transition: transform .25s ease-in-out;
+          }
+  
+          &:hover {
+            svg {
+              transform: translateX(.5rem);
+            }
+          }
+        }
       }
     }
   }
