fix: Finishing touches

--- a/src/styles/pages/_students.scss
+++ b/src/styles/pages/_students.scss
@@ -44,7 +44,7 @@ main {
         justify-content: center;
       }
 
-      button {
+      .button {
         width: 100%;
         max-width: 30rem;
 
