--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -26,6 +26,7 @@ main {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
+    gap: 2rem;
     padding: 2rem 0;
     padding-bottom: 4rem;
 
@@ -52,7 +53,7 @@ main {
 
       width: 100%;
 
-      button {
+      .button {
         width: 100%;
         max-width: 30rem;
       }
@@ -78,6 +79,11 @@ main {
     justify-content: space-around;
     padding: 2rem 0;
     line-height: 2.5em;
+    
+    h3 {
+      @include L;
+      margin-top: 2rem;
+    }
 
     h2 {
       padding-bottom: 1rem;
